--- a/style.css
+++ b/style.css
@@ -292,6 +292,9 @@ button:hover{
     color: #463F3A;
 }
 /*----------------Responsiveness-------------------*/
+.menu-icons{
+    display: none;
+}
 @media only screen and (max-width:600px){
 
     .bckgrnd-img{
@@ -300,11 +303,33 @@ button:hover{
         margin-right: auto;
         width: 50%;
     }
+    .logo{
+        position: relative;
+        width: 100px;
+        height: 50px;
+        left: 250px;
+        top: 10px;
+        right: 20px;
+    }
+    .menu-icons{
+        display: block;
+        left: 21px;
+        top: 23px;
+
+    }
     .header-text{
         margin-top: 100%;
         font-size: 16px;
     }
     .header-text h1{
         font-size: 30px;
+    }
+    nav ul{
+        background: #D9D9D9;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        width: 159px;
+        height: 361px;
     }
 }
