--- a/style.css
+++ b/style.css
@@ -292,24 +292,17 @@ button:hover{
     color: #463F3A;
 }
 /*----------------Responsiveness-------------------*/
-.menu-icons{
+nav .menu-icons{
     display: none;
 }
 @media only screen and (max-width:600px){
-
     .bckgrnd-img{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
+        display: none;
     }
     .logo{
         position: relative;
         width: 100px;
         height: 50px;
-        left: 250px;
-        top: 10px;
-        right: 20px;
     }
     .menu-icons{
         display: block;
@@ -324,12 +317,22 @@ button:hover{
     .header-text h1{
         font-size: 30px;
     }
+    nav .menu-icons{
+        display: block;
+    }
     nav ul{
         background: #D9D9D9;
         position: fixed;
-        top: 10px;
-        right: 10px;
-        width: 159px;
-        height: 361px;
+        top: 0px;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
     }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .menu
 }
