--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ color: #463F3A;
     height: 314px;
     margin-bottom: 20px;
 }
-/*Sing up Page*/
+/*Blogs*/
 .blogs{
     width: 100%;
     display: flex;
@@ -200,6 +200,19 @@ color: #463F3A;
     font-size: 25px;
     color: #463F3A;
     padding-bottom: 15px;
+}
+/*Sing up*/
+.sing-up{
+    text-align: center;
+    padding: 30px;
+}
+.sing-up a{
+    text-decoration: none;
+    font-size: 26px;
+    color: #fff;
+    background-color: #463F3A;
+    border-radius: 20px;
+    padding: 15px;
 }
 /*Contact Page*/
 .contact{
@@ -297,7 +310,12 @@ nav .menu-icons{
 }
 @media only screen and (max-width:600px){
     .bckgrnd-img{
-        display: none;
+        position: absolute;
+        width: 341px;
+        height: 357px;
+        left: 20px;
+        top: 100px;
+        border-radius: 20px;
     }
     .logo{
         position: relative;
@@ -311,7 +329,7 @@ nav .menu-icons{
 
     }
     .header-text{
-        margin-top: 100%;
+        margin-top: 140%;
         font-size: 16px;
     }
     .header-text h1{
@@ -319,6 +337,9 @@ nav .menu-icons{
     }
     nav .menu-icons{
         display: block;
+    }
+    nav ul li a{
+        font-size: 24px;
     }
     nav ul{
         background: #D9D9D9;
@@ -333,5 +354,11 @@ nav .menu-icons{
     nav ul li{
         display: block;
         margin: 25px;
+    }
+    nav ul .menu-icons{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
     }
     }
